fix bug when generate learning path